trino/base/trino-coordinator-dc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trino-coordinator
  labels:
    instance: trino
    role: trino-coordinator
spec:
  selector:
    matchLabels:
      instance: trino
      role: trino-coordinator
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        instance: trino
        role: trino-coordinator
    spec:
      volumes:
        - name: root-ca
          secret:
            secretName: root-ca
            items:
              - key: RH-IT-Root-CA.crt
                path: RH-IT-Root-CA.crt
        - name: trino-config-volume
          secret:
            secretName: trino-config
            items:
              - key: config-coordinator.properties
                path: config-coordinator.properties
              - key: jvm.config
                path: jvm.config
              - key: log.properties
                path: log.properties
              - key: node.properties
                path: node.properties
              - key: password-authenticator.properties
                path: password-authenticator.properties
              - key: access-control.properties
                path: access-control.properties
              - key: rules.json
                path: rules.json
              - key: group-provider.properties
                path: group-provider.properties
              - key: group-mapping.properties
                path: group-mapping.properties
        - name: trino-catalogs-volume
          secret:
            secretName: trino-catalog
            defaultMode: 420
            items:
              - key: hive.properties
                path: hive.properties
              - key: jmx.properties
                path: jmx.properties
      containers:
        - resources:
            requests:
              cpu: $(trino_cpu_request)
              memory: $(trino_memory_request)
            limits:
              cpu: $(trino_cpu_limit)
              memory: $(trino_memory_limit)
          name: trino-coordinator
          command:
            - /usr/lib/trino/bin/run-trino
          ports:
            - containerPort: 8080
              protocol: TCP
          volumeMounts:
            - name: trino-config-volume
              mountPath: /etc/trino
            - name: trino-catalogs-volume
              mountPath: /etc/trino/catalog
            - name: root-ca
              mountPath: /etc/trino/certs
          image: $(trino_image)
          args:
            - --config=/etc/trino/config-coordinator.properties
